bff-web: improve openapi
